--- a/cmakelists/gdal/ogr/ogrsf_frmts/cad/libopencad/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/ogrsf_frmts/cad/libopencad/CMakeLists.txt
@@ -1,17 +1,5 @@
 add_library(
   libopencad STATIC
-  opencad.h
-  opencad_api.h
-  cadclasses.h
-  cadcolors.h
-  caddictionary.h
-  cadfile.h
-  cadfileio.h
-  cadlayer.h
-  cadobjects.h
-  cadtables.h
-  dwg/io.h
-  dwg/r2000.h
   cadclasses.cpp
   cadcolors.cpp
   caddictionary.cpp
@@ -23,13 +11,12 @@ add_library(
   cadlayer.cpp
   cadobjects.cpp
   cadtables.cpp
-  opencad.cpp
-  dwg/io.cpp
-  dwg/r2000.cpp)
+  opencad.cpp)
 target_include_directories(
   libopencad PRIVATE $<TARGET_PROPERTY:cpl,SOURCE_DIR> $<TARGET_PROPERTY:cpl,BINARY_DIR>
-                     $<TARGET_PROPERTY:ogr_CAD,SOURCE_DIR> ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/dwg)
+                     $<TARGET_PROPERTY:ogr_CAD,SOURCE_DIR> ${CMAKE_CURRENT_SOURCE_DIR})
 set_target_properties(libopencad PROPERTIES
                       POSITION_INDEPENDENT_CODE ON
                       ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 target_link_libraries(GDAL_LINK_LIBRARY INTERFACE libopencad)
+add_subdirectory(dwg)
