Swig-python: fix source list
add missing __init__.py for 2to3 source.

Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/cmakelists/gdal/swig/python/CMakeLists.txt
+++ b/cmakelists/gdal/swig/python/CMakeLists.txt
@@ -47,8 +47,9 @@ if (SWIG_REGENERATE_PYTHON)
     list(APPEND GDAL_PYTHON_PYSOURCES "${CMAKE_CURRENT_BINARY_DIR}/osgeo/gdal_array.py")
   endif ()
 else ()
-  set(GDAL_PYTHON_CSOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/extensions/")
+  set(GDAL_PYTHON_CSOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/extensions")
   set(GDAL_PYTHON_PYSOURCES
+      ${CMAKE_CURRENT_BINARY_DIR}/osgeo/__init__.py
       ${CMAKE_CURRENT_BINARY_DIR}/osgeo/gdal.py
       ${CMAKE_CURRENT_BINARY_DIR}/osgeo/gdalconst.py
       ${CMAKE_CURRENT_BINARY_DIR}/osgeo/gdalnumeric.py
