--- a/cmakelists/autotest/cpp/CMakeLists.txt
+++ b/cmakelists/autotest/cpp/CMakeLists.txt
@@ -55,11 +55,11 @@ if (WIN32)
   set(ENVSEP ";")
 else ()
   set(ENVSEP ":")
-endif () 
-# FIXME: better handling of output path w/o hard coded.
-## set(GDAL_OUTPUT_DIR "$<TARGET_PROPERTY:gdal,LIBRARY_OUTPUT_DIRECTORY>")
+endif ()
+# FIXME: better handling of output path w/o hard coded. set(GDAL_OUTPUT_DIR
+# "$<TARGET_PROPERTY:gdal,LIBRARY_OUTPUT_DIRECTORY>")
 file(TO_NATIVE_PATH "${CMAKE_BINARY_DIR}/gdal" GDAL_OUTPUT_DIR)
-## set(GDAL_DRIVER_PATH "$<TARGET_PROPERTY:gdal,PLUGIN_OUTPUT_DIR")
+# set(GDAL_DRIVER_PATH "$<TARGET_PROPERTY:gdal,PLUGIN_OUTPUT_DIR")
 file(TO_NATIVE_PATH "${CMAKE_BINARY_DIR}/gdal/gdalplugins" GDAL_DRIVER_PATH)
 file(TO_NATIVE_PATH "${CMAKE_SOURCE_DIR}/gdal/data" GDAL_DATA)
 list(APPEND TEST_ENV PATH="${GDAL_OUTPUT_DIR}${ENVSEP}$ENV{PATH}"
