--- a/cmakelists/gdal/CMakeLists.txt
+++ b/cmakelists/gdal/CMakeLists.txt
@@ -131,7 +131,7 @@ if (GDAL_USE_LIBCSF_INTERNAL)
   add_subdirectory(frmts/pcraster/libcsf)
 endif ()
 if (GDAL_USE_LIBLERC_INTERNAL)
-  add_subdirectory(frmts/mrf/libLERC)
+  add_subdirectory(frmts/mrf/LERCV1)
   add_subdirectory(third_party/LercLib)
 endif ()
 if (GDAL_USE_SHAPELIB_INTERNAL)
