--- a/cmakelists/gdal/frmts/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/CMakeLists.txt
@@ -84,7 +84,7 @@ gdal_format(ignfheightasciigrid "IGNF Height ASCII Grid")
 gdal_format(daas "Airbus DS Intelligence Data As A Service(DAAS)")
 gdal_format(tga "TGA")
 gdal_format(stacta "STACTA")
-gdal_format(ogcapi "OGCAPI))
+gdal_format(ogcapi "OGCAPI")
 
 # optioal Formats
 gdal_optional_format(bsb "Maptech/NOAA BSB Nautical Chart Format")
