--- a/cmakelists/gdal/alg/CMakeLists.txt
+++ b/cmakelists/gdal/alg/CMakeLists.txt
@@ -38,7 +38,9 @@ add_library(
 include(GdalStandardIncludes)
 gdal_standard_includes(alg)
 target_include_directories(alg PRIVATE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/marching_squares>
-                                       $<TARGET_PROPERTY:gdal_GTIFF,SOURCE_DIR> $<TARGET_PROPERTY:gdal_vrt,SOURCE_DIR>)
+                                       $<TARGET_PROPERTY:gdal_GTIFF,SOURCE_DIR>
+                                       $<TARGET_PROPERTY:gdal_vrt,SOURCE_DIR>
+                                       $<TARGET_PROPERTY:gdal_MEM,SOURCE_DIR>)
 set_property(TARGET alg PROPERTY POSITION_INDEPENDENT_CODE ON)
 target_sources(gdal PRIVATE $<TARGET_OBJECTS:alg>)
 if (CMAKE_VERSION VERSION_GREATER_EQUAL 3.16)
