--- a/cmakelists/gdal/ogr/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/CMakeLists.txt
@@ -88,7 +88,7 @@ if (HAVE_GEOS)
   target_link_libraries(GDAL_LINK_LIBRARY INTERFACE GEOS::GEOS)
 endif ()
 
-if (HAVE_SFCGAL)
+if (GDAL_USE_SFCGAL)
   target_compile_definitions(ogr PRIVATE -DHAVE_SFCGAL=1)
   target_include_directories(ogr PRIVATE ${SFCGAL_INCLUDE_DIRS})
   target_link_libraries(GDAL_LINK_LIBRARY INTERFACE SFCGAL::SFCGAL)
