--- a/cmakelists/gdal/frmts/hdf5/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/hdf5/CMakeLists.txt
@@ -22,8 +22,7 @@ endif ()
 if (GDAL_ENABLE_PLUGIN OR GDAL_ENABLE_FRMT_HDF5_PLUGIN)
   target_compile_definitions(gdal_HDF5 PRIVATE -DHDF5_PLUGIN)
 endif ()
-target_compile_definitions(gdal_HDF5 PRIVATE ${HDF5_DEFINITIONS} -DH5_USE_16_API:BOOL=ON
-                                             -DDEFAULT_API_VERSION:STRING=v16)
+target_compile_definitions(gdal_HDF5 PRIVATE ${HDF5_DEFINITIONS})
 gdal_standard_includes(gdal_HDF5)
 if (WIN32)
   target_compile_definitions(gdal_HDF5 PRIVATE -DWIN32)
