Fixes related to SSE/SSSE3/AVX

--- a/cmakelists/gdal/alg/CMakeLists.txt
+++ b/cmakelists/gdal/alg/CMakeLists.txt
@@ -102,12 +102,12 @@ endif ()
 if (HAVE_SSE_AT_COMPILE_TIME)
   target_sources(alg PRIVATE gdalgridsse.cpp)
   target_compile_definitions(alg PRIVATE -DHAVE_SSE_AT_COMPILE_TIME)
-  target_compile_options(alg PRIVATE ${GDAL_ARCH_FLAG})
+  target_compile_options(alg PRIVATE ${GDAL_SSSE_FLAG})
 endif ()
 if (HAVE_AVX_AT_COMPILE_TIME)
   target_sources(alg PRIVATE gdalgridavx.cpp)
   target_compile_definitions(alg PRIVATE -DHAVE_AVX_AT_COMPILE_TIME)
-  target_compile_options(alg PRIVATE ${GDAL_ARCH_FLAG})
+  target_compile_options(alg PRIVATE ${GDAL_AVX_FLAG})
 endif ()
 
 include(TargetPublicHeader)
