--- a/cmakelists/gdal/frmts/ozi/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/ozi/CMakeLists.txt
@@ -6,7 +6,7 @@ if (GDAL_USE_LIBZ_INTERNAL)
 else ()
   target_compile_definitions(gdal_OZI PRIVATE -DHAVE_ZLIB_H -DHAVE_ZLIB)
   target_include_directories(gdal_OZI PRIVATE ${ZLIB_INCLUDE_DIRS})
-  gdal_target_link_libraries(TARGET gdal_OZI LIBRARIES ${ZLIB_LIBRARIES})
+  gdal_target_link_libraries(TARGET gdal_OZI LIBRARIES ZLIB::ZLIB)
   if (MSVC)
     target_compile_definitions(gdal_OZI PRIVATE -DZLIB_DLL)
   endif ()
