gdal/CMakeLists.txt: add wbemuuid lib dependency for port/cpl_aws_win32.cpp

--- a/cmakelists/gdal/CMakeLists.txt
+++ b/cmakelists/gdal/CMakeLists.txt
@@ -172,7 +172,8 @@ endif ()
 
 # Windows(Mingw/MSVC) link libraries
 if (CMAKE_SYSTEM_NAME MATCHES "Windows")
-  target_link_libraries(gdal PRIVATE wsock32 ws2_32 secur32 psapi)
+  # wbemuuid needed for port/cpl_aws_win32.cpp
+  target_link_libraries(gdal PRIVATE wsock32 ws2_32 secur32 psapi wbemuuid)
 endif ()
 
 get_property(_plugins GLOBAL PROPERTY PLUGIN_MODULES)
