--- a/cmakelists/gdal/ogr/ogrsf_frmts/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/ogrsf_frmts/CMakeLists.txt
@@ -118,8 +118,7 @@ ogr_dependent_driver(fme "FME" "HAVE_FME")
 ogr_dependent_driver(oci "Oracle OCI" "HAVE_ORACLE")
 ogr_dependent_driver(db2 "IBM DB2" "HAVE_ODBC")
 ogr_dependent_driver(idb "IDB" "HAVE_IDB")
-# to be removed in GDAL 3.5
-# ogr_dependent_driver(arcobjects ARCOBJECTS "ARCOBJECTS_FOUND")
+# to be removed in GDAL 3.5 ogr_dependent_driver(arcobjects ARCOBJECTS "ARCOBJECTS_FOUND")
 ogr_dependent_driver(ods ODS "HAVE_EXPAT")
 ogr_dependent_driver(ogdi "OGDI" "HAVE_OGDI")
 ogr_dependent_driver(lvbag "LVBAG" "HAVE_EXPAT")
