--- a/cmakelists/CMakeLists.txt
+++ b/cmakelists/CMakeLists.txt
@@ -50,6 +50,33 @@ endif ()
 if (POLICY CMP0094)
   cmake_policy(SET CMP0094 NEW)
 endif ()
+if (POLICY CMP0102)
+  cmake_policy(SET CMP0102 NEW)
+endif ()
+if (POLICY CMP0110)
+  cmake_policy(SET CMP0110 NEW)
+endif ()
+if (POLICY CMP0112)
+  cmake_policy(SET CMP0112 NEW)
+endif ()
+if (POLICY CMP0113)
+  cmake_policy(SET CMP0113 NEW)
+endif ()
+if (POLICY CMP0115)
+  cmake_policy(SET CMP0115 NEW)
+endif ()
+if (POLICY CMP0116)
+  cmake_policy(SET CMP0116 NEW)
+endif ()
+if (POLICY CMP0117)
+  cmake_policy(SET CMP0117 NEW)
+endif ()
+if (POLICY CMP0124)
+  cmake_policy(SET CMP0124 NEW)
+endif ()
+if (POLICY CMP0125)
+  cmake_policy(SET CMP0125 NEW)
+endif ()
 #
 project(gdal LANGUAGES C CXX)
 #
