Fix zarr driver dependency
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/cmakelists/gdal/ogr/ogrsf_frmts/pgeo/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/ogrsf_frmts/pgeo/CMakeLists.txt
@@ -5,3 +5,4 @@ add_gdal_driver(
           ogrpgeoselectlayer.cpp
   BUILTIN)
 gdal_standard_includes(ogr_PGeo)
+target_include_directories(ogr_PGeo PRIVATE $<TARGET_PROPERTY:ogr_OpenFileGDB,SOURCE_DIR>)
