--- a/cmakelists/gdal/frmts/rdb/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/rdb/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_gdal_driver(TARGET gdal_RDB SOURCES rdbdataset.cpp)
 gdal_standard_includes(gdal_RDB)
-target_include_directories(gdal_RDB PRIVATE $<TARGET_PROPERTY:ogr_geojson,SOURCE_DIR>)
+target_include_directories(gdal_RDB PRIVATE ${GDAL_VECTOR_FORMAT_SOURCE_DIR}/geojson)
