--- a/cmakelists/gdal/frmts/ogcapi/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/ogcapi/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_gdal_driver(TARGET gdal_OGCAPI SOURCES gdalogcapidataset.cpp)
 gdal_standard_includes(gdal_OGCAPI)
-target_include_directories(gdal_OGCAPI PRIVATE $<TARGET_PROPERTY:ogr_GML,SOURCE_DIR>)
+target_include_directories(gdal_OGCAPI PRIVATE ${GDAL_VECTOR_FORMAT_SOURCE_DIR}/gml)
