--- a/cmakelists/gdal/frmts/rda/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/rda/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_gdal_driver(TARGET gdal_RDA SOURCES rdadataset.cpp)
 gdal_standard_includes(gdal_RDA)
-target_include_directories(gdal_RDA PRIVATE $<TARGET_PROPERTY:ogr_geojson,SOURCE_DIR>)
+target_include_directories(gdal_RDA PRIVATE ${GDAL_VECTOR_FORMAT_SOURCE_DIR}/geojson)
 if (GDAL_USE_LIBJSONC_INTERNAL)
   target_include_directories(gdal_RDA PRIVATE $<TARGET_PROPERTY:libjson,SOURCE_DIR>)
 else ()
