--- a/cmakelists/gdal/frmts/stacta/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/stacta/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_gdal_driver(TARGET gdal_STACTA SOURCES stactadataset.cpp)
 gdal_standard_includes(gdal_STACTA)
-target_include_directories(gdal_STACTA PRIVATE $<TARGET_PROPERTY:gdal_MEM,SOURCE_DIR>)
+target_include_directories(gdal_STACTA PRIVATE ${GDAL_RASTER_FORMAT_SOURCE_DIR}/mem)
