--- a/cmakelists/gdal/frmts/zarr/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/zarr/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_gdal_driver(TARGET gdal_Zarr SOURCES zarr_array.cpp zarr_attribute.cpp zarr_group.cpp zarrdriver.cpp)
 gdal_standard_includes(gdal_Zarr)
 target_include_directories(
-  gdal_Zarr PRIVATE ${CMAKE_SOURCE_DIR}/gdal/frmts/mem ${CMAKE_SOURCE_DIR}/gdal/frmts/gtiff
-                    ${CMAKE_SOURCE_DIR}/gdal/frmts/netcdf})
+  gdal_Zarr PRIVATE ${GDAL_RASTER_FORMAT_SOURCE_DIR}/mem ${GDAL_RASTER_FORMAT_SOURCE_DIR}/gtiff
+                    ${GDAL_RASTER_FORMAT_SOURCE_DIR}/netcdf)
